src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Carrier_ID__c</fullName>
        <label>Parent Carrier ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>122465</fullName>
                </value>
                <value>
                    <fullName>143543</fullName>
                </value>
                <value>
                    <fullName>144360</fullName>
                </value>
                <value>
                    <fullName>145050</fullName>
                </value>
                <value>
                    <fullName>147997</fullName>
                </value>
                <value>
                    <fullName>150581</fullName>
                </value>
                <value>
                    <fullName>150732</fullName>
                </value>
                <value>
                    <fullName>151755</fullName>
                </value>
                <value>
                    <fullName>157330</fullName>
                </value>
                <value>
                    <fullName>160109</fullName>
                </value>
                <value>
                    <fullName>162181</fullName>
                </value>
                <value>
                    <fullName>162383</fullName>
                </value>
                <value>
                    <fullName>162800</fullName>
                </value>
                <value>
                    <fullName>169608</fullName>
                </value>
                <value>
                    <fullName>170602</fullName>
                </value>
                <value>
                    <fullName>170960</fullName>
                </value>
                <value>
                    <fullName>172348</fullName>
                </value>
                <value>
                    <fullName>175433</fullName>
                </value>
                <value>
                    <fullName>175545</fullName>
                </value>
                <value>
                    <fullName>178682</fullName>
                </value>
                <value>
                    <fullName>179102</fullName>
                </value>
                <value>
                    <fullName>180956</fullName>
                </value>
                <value>
                    <fullName>182851</fullName>
                </value>
                <value>
                    <fullName>183703</fullName>
                </value>
                <value>
                    <fullName>184835</fullName>
                </value>
                <value>
                    <fullName>189227</fullName>
                </value>
                <value>
                    <fullName>192449</fullName>
                </value>
                <value>
                    <fullName>301119</fullName>
                </value>
                <value>
                    <fullName>306598</fullName>
                </value>
                <value>
                    <fullName>306721</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner this Program belongs to, which is used for grouping programs together.</description>
        <inlineHelpText>The partner this Program belongs to, which is used for grouping programs together.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peoplesoft_rel_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Peoplesoft Rel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantee_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personal Guarantee URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language_Indicator__c</fullName>
        <label>Preferred Language Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>ENU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Account_Number_Max_Length__c</fullName>
        <label>Previous Account Number Max-Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Number_Min_Length__c</fullName>
        <label>Previous Account Number Min-Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GU Fleet Card</fullName>
                </value>
                <value>
                    <fullName>SP Fleet Card</fullName>
                </value>
                <value>
                    <fullName>SG Fleet Card</fullName>
                </value>
                <value>
                    <fullName>HK Fleet Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Pricing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the standard pricing for this program.  Please see the offer on the campaign for any promotional pricing.</inlineHelpText>
        <label>Program Pricing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publish_BOCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish BOCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Fleet_Data_Capture_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Fleet Data Capture Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branded assets for Program</description>
        <label>BOCA_res</label>
        <referenceTo>BOCA_res__c</referenceTo>
        <relationshipLabel>Program</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section_Titles__c</fullName>
        <description>BOCA Section Headers</description>
        <label>Section Titles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tell Us About Your Business</fullName>
                </value>
                <value>
                    <fullName>Billing Contact Information</fullName>
                </value>
                <value>
                    <fullName>Promotional Information</fullName>
                </value>
                <value>
                    <fullName>Statement &amp; Report Delivery</fullName>
                </value>
                <value>
                    <fullName>Tell Us About Yourself</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions</fullName>
                </value>
                <value>
                    <fullName>Business Information</fullName>
                </value>
                <value>
                    <fullName>Billing Information</fullName>
                </value>
                <value>
                    <fullName>Additional Information</fullName>
                </value>
                <value>
                    <fullName>Authorized Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_CS_Satisfaction_Surveys__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether Customer Service Satisfaction surveys should be sent to customers of this program</description>
        <inlineHelpText>Uncheck for Cobrand / FMC or US Government Programs</inlineHelpText>
        <label>Send CS Satisfaction Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_App_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, once an application is adjudicated, send to App Manager.</description>
        <label>Send To App Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Program_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Program Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Program Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Program_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Program Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SideBar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SideBar</label>
        <length>80000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Side_Panel_Title__c</fullName>
        <description>Title for left panel on BOCA</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a title to appear above left panel on BOCA layout</inlineHelpText>
        <label>Side Panel Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_L1_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Siebel L1 Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Program_Row_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Siebel Program Row Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Type__c</fullName>
        <label>Statement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>46</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_C__c</fullName>
        <description>Generally static T&amp;C doc for bottom of BOCA, will default to the WEX BOCA but FlexCard should use the BOCA_TC</description>
        <inlineHelpText>Generally static T&amp;C doc for bottom of BOCA, will default to the WEX BOCA but FlexCard should use the BOCA_TC</inlineHelpText>
        <label>TNC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLANK_TNC</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC</fullName>
                    <default>true</default>
                    <label>BOCA_TNC</label>
                </value>
                <value>
                    <fullName>FLEX_BOCA_TNC</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_FEE_699</fullName>
                </value>
                <value>
                    <fullName>BOCA_GETT_TNC</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Chevron</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Shell</fullName>
                </value>
                <value>
                    <fullName>CPBOCATNC</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_ShellSmallBusiness</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_ShellPlus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Logo__c</fullName>
        <formula>IMAGE(&apos;https://&apos; &amp; $Label.External_Instance_URL &amp; &apos;/creditapplication/servlet/servlet.FileDownload?file=&apos; &amp; Logo_Image_ID__c, &apos;Logo&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <inlineHelpText>disable this once new BOCA code is done</inlineHelpText>
        <label>Form Template OLD</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditApp_Revolver</fullName>
                </value>
                <value>
                    <fullName>WexBOCA</fullName>
                </value>
                <value>
                    <fullName>creditApp_noPG</fullName>
                </value>
                <value>
                    <fullName>eAppBOCA</fullName>
                </value>
                <value>
                    <fullName>OTR_BOCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Generator_Group__c</fullName>
        <label>URL Generator Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sinclair</fullName>
                </value>
                <value>
                    <fullName>WAWA</fullName>
                </value>
                <value>
                    <fullName>Conoco</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Pricing_Data_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Pricing Data Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WEX_Platform__c</fullName>
        <label>WEX Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CoreCard</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All_w_Created_Date</fullName>
        <columns>Siebel_Program_Row_Id__c</columns>
        <columns>Form_Template__c</columns>
        <columns>T_C__c</columns>
        <columns>NAME</columns>
        <columns>Personal_Guarantee_URL__c</columns>
        <columns>Siebel_L1_Account_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Email_From_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>Mark Bickford</value>
        </filters>
        <label>All w Created Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMAP_Programs</fullName>
        <columns>NAME</columns>
        <columns>Client_Id__c</columns>
        <columns>Client_Name__c</columns>
        <columns>AOT_Amount__c</columns>
        <columns>Country__c</columns>
        <columns>Late_Payer_Days__c</columns>
        <columns>Late_Fee_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Name__c</field>
            <operation>equals</operation>
            <value>ExxonMobil Saipan,ExxonMobil Guam,ExxonMobil Singapore,ExxonMobil Hong Kong</value>
        </filters>
        <label>EMAP Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FlexCard_Programs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Short_Name__c</field>
            <operation>contains</operation>
            <value>WEXFleet</value>
        </filters>
        <label>FlexCard Programs</label>
    </listViews>
    <listViews>
        <fullName>Published_BOCA_Programs</fullName>
        <columns>NAME</columns>
        <columns>Brand_Short_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>BOCA_Type__c</columns>
        <columns>Form_Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_BOCA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Published BOCA Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sinclair_Programs</fullName>
        <columns>NAME</columns>
        <columns>Always_Require_PG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>URL_Generator_Group__c</field>
            <operation>equals</operation>
            <value>Sinclair</value>
        </filters>
        <filters>
            <field>Publish_BOCA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sinclair Programs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>AU_Program</fullName>
        <active>true</active>
        <description>Australia Program</description>
        <label>AU Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_Program</fullName>
        <active>true</active>
        <description>This record type is used for EFS Corporate Payment Solutions aka WEX Payables and EFS Virtual</description>
        <label>CPS Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMAP_Program</fullName>
        <active>true</active>
        <description>EMAP Program</description>
        <label>EMAP Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleet_Card_Program</fullName>
        <active>true</active>
        <label>Fleet Card Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTR_Program</fullName>
        <active>true</active>
        <label>OTR Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>